webroot/css/default.css
/* ... */
.button5 {
  padding: 15px 21px 15px 15px;
  margin: 0 0 0 4px;
  background-image: url("/img/bu4.png");
}
.button5:hover {
  background-image: url("/img/bu4x.png");
}
.button5y {
  padding: 15px 21px 15px 15px;
  background-image: url("/img/bu4y.png");
  cursor: context-menu;
}
.button6 {
  text-transform: uppercase;
  padding: 15px 61px 15px 21px;
  background-image: url("/img/bu4.png");
}
.button6:hover {
  text-transform: uppercase;
  background-image: url("/img/bu4x.png");
}
#sandbox {
  color: black;
  background-color: white;
  border: 1px solid black;
  padding: 10px;
  width: 600px;
  font-size: 16px;
}
.boards-tile {
  background-color: #ffffff1a;
  color: #74d14c;
  border-radius: 50px;
  padding: 4px 8px;
  margin: 4px;
  float: left;
  white-space: nowrap;
  cursor: pointer;
  text-decoration: none;
  background-image: linear-gradient(
    rgba(200, 200, 200, 0.15),
    rgba(33, 33, 33, 0.2)
  ) !important;
}
.dropdown-tile {
  background-color: #ffffff1a;
  color: #fff;
  border-radius: 50px;
  padding: 4px 8px;
  margin: 4px;
  float: left;
  white-space: nowrap;
  cursor: pointer;
  text-decoration: none;
  background-image: linear-gradient(
    rgba(200, 200, 200, 0.15),
    rgba(33, 33, 33, 0.2)
  ) !important;
}
.dropdown-tile:hover {
  background-image: linear-gradient(
    rgba(200, 200, 200, 0.35),
    rgba(33, 33, 33, 0.4)
  ) !important;
}
.tile-color1 {
  background: #558a35;
}
.tile-color2 {
  background: #ac4bd0;
}
.tile-color3 {
  background: #aa5538;
}
.tile-color4 {
  background: #33333388;
}
.tiles-submit {
  float: left;
  width: 100%;
}
.tiles-submit-inner-select {
  float: left;
  font-weight: 800;
  padding: 5px 9px;
}
.tiles-submit-inner {
  float: right;
  font-weight: 800;
  padding: 5px 9px;
  color: white;
}
.dropdown-boxes {
  background: #222222;
  color: white;
  padding: 10px;
  border-radius: 5px;
  max-width: 380px;
  border: 1px solid black;
}
#dropdown-topics {
  display: none;
  position: absolute;
  top: 61px;
  left: 37px;
  max-width: 900px;
  z-index: 100;
}
#dropdown-difficulty {
  display: none;
  position: absolute;
  top: 61px;
  left: 141px;
  z-index: 100;
}
#dropdown-tags {
  display: none;
  position: absolute;
  top: 61px;
  left: 265px;
  max-width: 597px;
  z-index: 100;
}
.set-button-icon {
  padding-left: 5px;
}
.animate-icon {
  transition: 0.4s;
}
.rotateArrow {
  transform: rotate(180deg);
}
#ans {
  position: absolute;
  left: 835px;
  top: 665px;
  background-color: white;
  border: 1px solid black;
  padding: 5px;
}
#ans2 {
  color: rgb(224, 60, 75);
  padding: 4px 0 0 45px;
}
#ansBig {
  position: absolute;
  left: 835px;
  top: 960px;
  background-color: white;
  border: 1px solid black;
  padding: 5px;
}
.display1 {
  font-size: 20px;
}
.title {
  color: #000;
  padding: 0px;
  margin-top: 7px;
  margin-bottom: 0px;
  font-size: 24px;
  font-style: normal;
  font-variant: normal;
  font-weight: 800;
  line-height: 22px;
  text-decoration: underline;
}
.titleBy {
  font-size: 16px;
  font-style: italic;
  margin-top: 7px;
  margin-bottom: 7px;
}
.titleFooter {
  font-size: 14px;
}

#playTitle {
  font-size: 20px;
  font-weight: 800;
  color: black;
}
#playTitleA { color: var(--text-color); }
#descriptionText { color: var(--text-softer-color); }
#header {
  margin-bottom: 2px;
  padding: 2px;
  background-color: #87cefa;
}
#footer {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-top: 5px;
  padding: 10px;
  font-size: 13px;
  color: #fff;
}
.footer-element {
  margin: 2px;
}
.footer-space {
  margin: 6px;
}
.footerLinks a {
  color: white;
  text-decoration: none;
}
.footerLinks a:hover {
  text-decoration: underline;
}
.titleDescription1 {
  font-size: 17px;
}
.titleDescription2 {
  font-size: 22px;
}
#pageTitle {
  font-size: 16pt;
  font-weight: bold;
}
#account-bar {
  max-width: 966px;
  height: 100%;
  margin: 0px auto;
}
#account-bar-wrapper {
  position: absolute;
  top: -31px;
  left: 1130px;
  width: 140px;
  cursor: context-menu;
  background-color: white;
}
#account-bar-xp-wrapper {
  position: absolute;
  left: 0px;
  top: 59px;
  width: 144px;
  height: 26px;
  margin: 0px 0px 0px 15px;
  color: white;
  font-family: "Arial Black", verdana, helvetica, arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 600;
  letter-spacing: 1px;
  white-space: nowrap;
  border: 1px solid #ae922d;
  -moz-border-radius-bottomleft: 5px;
  -moz-border-radius-bottomright: 5px;
  border-radius-bottomleft: 5px;
  border-radius-bottomright: 5px;
  -moz-border-radius-bottomright: 5px;
  -moz-border-radius-bottomleft: 5px;
  border-bottom-right-radius: 5px;
  border-bottom-left-radius: 5px;
  -moz-border-radius-topright: 5px;
  -moz-border-radius-topleft: 5px;
  border-top-right-radius: 5px;
  border-top-left-radius: 5px;
}
#account-bar-xp {
  position: relative;
  margin: 3px 0px 0px 0px;
  color: white;
  font-family: "Arial Black", verdana, helvetica, arial, sans-serif;
  font-size: 14px;
  font-style: normal;
  font-variant: normal;
  font-weight: 600;
  letter-spacing: 1px;
  white-space: nowrap;
}
#account-bar-xp p {
  position: relative;
}
#bar-0 {
  float: left;
  margin-left: 36px;
}
#bar-1 {
  float: left;
  margin: 0;
}
#bar-2 {
  float: left;
  margin: 0;
  font-family: Arial;
}
#bar-3 {
  float: left;
  margin: 0;
  font-family: Arial;
}

.accountBarLevel
{
	color: #74d14c;
	text-decoration: none;
	white-space: nowrap;
}

.accountBarRating
{
	color: #d19fe4;
	text-decoration: none;
	white-space: nowrap;
}

#account-bar-user,
#account-bar-user2 {
  font-family: "Arial Black", verdana, helvetica, arial, sans-serif;
  letter-spacing: 1px;
  position: absolute;
  top: 36px;
  left: 15px;
  display: inline-block;
  font-size: 17px;
  font-weight: 700;
  font-style: normal;
  font-variant: normal;
}
#account-bar-user a {
  color: #74d14c;
  text-decoration: none;
  white-space: nowrap;
}
/* ... */

